--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -26,7 +26,26 @@ jobs:
       - name: Build with Maven
         run: mvn clean package
         working-directory: ./server
-
+        env:
+          DATABASE_URL: ${{DATASOURCE_URL}}
+          DATABASE_USERNAME: ${{DATASOURCE_USERNAME}}
+          DATABASE_PASSWORD: ${{DATASOURCE_PASSWORD}}
+          REDIS_HOST: ${{REDIS_HOST}}
+          REDIS_PASSWORD: ${{REDIS_PASSWORD}}
+          REDIS_PORT: ${{REDIS_PORT}}
+          INFLUXDB_URL: ${{INFLUXDB_URL}}
+          INFLUXDB_TOKEN: ${{INFLUXDB_TOKEN}}
+          KAFKA_BOOTSTRAP_SERVERS: ${{KAFKA_BOOTSTRAP_SERVERS}}
+          KAFKA_SASL_JAAS_CONFIG: ${{KAFKA_SASL_JAAS_CONFIG}}
+          GITEE_CLIENT_ID: ${{GITEE_CLIENT_ID}}
+          GITEE_CLIENT_SECRET: ${{GITEE_CLIENT_SECRET}}
+          GITHUB_CLIENT_ID: ${{GITHUB_CLIENT_ID}}
+          GITHUB_CLIENT_SECRET: ${{GITHUB_CLIENT_SECRET}}
+          WEICHAT_OPEN_CLIENT_ID: ${{WEICHAT_OPEN_CLIENT_ID}}
+          WEICHAT_OPEN_CLIENT_SECRET: ${{WEICHAT_OPEN_CLIENT_SECRET}}
+          ALIYUN_ACCESS_KEY_ID: ${{ALIYUN_ACCESS_KEY_ID}}
+          ALIYUN_ACCESS_KEY_SECRET: ${{ALIYUN_ACCESS_KEY_SECRET}}
+          JWT_SECRET: ${{JWT_SECRET}}     
       # 镜像名称 在当前目录
       - name: Build Docker image
         run: docker build -t pim-server .
