--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -26,26 +26,7 @@ jobs:
       - name: Build with Maven
         run: mvn clean package
         working-directory: ./server
-        env:
-          DATABASE_URL: ${{DATASOURCE_URL}}
-          DATABASE_USERNAME: ${{DATASOURCE_USERNAME}}
-          DATABASE_PASSWORD: ${{DATASOURCE_PASSWORD}}
-          REDIS_HOST: ${{REDIS_HOST}}
-          REDIS_PASSWORD: ${{REDIS_PASSWORD}}
-          REDIS_PORT: ${{REDIS_PORT}}
-          INFLUXDB_URL: ${{INFLUXDB_URL}}
-          INFLUXDB_TOKEN: ${{INFLUXDB_TOKEN}}
-          KAFKA_BOOTSTRAP_SERVERS: ${{KAFKA_BOOTSTRAP_SERVERS}}
-          KAFKA_SASL_JAAS_CONFIG: ${{KAFKA_SASL_JAAS_CONFIG}}
-          GITEE_CLIENT_ID: ${{GITEE_CLIENT_ID}}
-          GITEE_CLIENT_SECRET: ${{GITEE_CLIENT_SECRET}}
-          GITHUB_CLIENT_ID: ${{GITHUB_CLIENT_ID}}
-          GITHUB_CLIENT_SECRET: ${{GITHUB_CLIENT_SECRET}}
-          WEICHAT_OPEN_CLIENT_ID: ${{WEICHAT_OPEN_CLIENT_ID}}
-          WEICHAT_OPEN_CLIENT_SECRET: ${{WEICHAT_OPEN_CLIENT_SECRET}}
-          ALIYUN_ACCESS_KEY_ID: ${{ALIYUN_ACCESS_KEY_ID}}
-          ALIYUN_ACCESS_KEY_SECRET: ${{ALIYUN_ACCESS_KEY_SECRET}}
-          JWT_SECRET: ${{JWT_SECRET}}     
+    
       # 镜像名称 在当前目录
       - name: Build Docker image
         run: docker build -t pim-server .
@@ -88,4 +69,23 @@ jobs:
             # 运行新的容器实例
             docker run -d --name pim-server-container \
               -p 8000:8000 \
+              -e DATASOURCE_URL=${{ secrets.DATASOURCE_URL }} \
+              -e DATASOURCE_USERNAME=${{ secrets.DATASOURCE_USERNAME }} \
+              -e DATASOURCE_PASSWORD=${{ secrets.DATASOURCE_PASSWORD }} \
+              -e REDIS_HOST=${{ secrets.REDIS_HOST }} \
+              -e REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }} \
+              -e REDIS_PORT=${{ secrets.REDIS_PORT }} \
+              -e INFLUXDB_URL=${{ secrets.INFLUXDB_URL }} \
+              -e INFLUXDB_TOKEN=${{ secrets.INFLUXDB_TOKEN }} \
+              -e KAFKA_BOOTSTRAP_SERVERS=${{ secrets.KAFKA_BOOTSTRAP_SERVERS }} \
+              -e KAFKA_SASL_JAAS_CONFIG=${{ secrets.KAFKA_SASL_JAAS_CONFIG }} \
+              -e GITEE_CLIENT_ID=${{ secrets.GITEE_CLIENT_ID }} \
+              -e GITEE_CLIENT_SECRET=${{ secrets.GITEE_CLIENT_SECRET }} \
+              -e GITHUB_CLIENT_ID=${{ secrets.GITHUB_CLIENT_ID }} \
+              -e GITHUB_CLIENT_SECRET=${{ secrets.GITHUB_CLIENT_SECRET }} \
+              -e WEICHAT_OPEN_CLIENT_ID=${{ secrets.WEICHAT_OPEN_CLIENT_ID }} \
+              -e WEICHAT_OPEN_CLIENT_SECRET=${{ secrets.WEICHAT_OPEN_CLIENT_SECRET }} \
+              -e ALIYUN_ACCESS_KEY_ID=${{ secrets.ALIYUN_ACCESS_KEY_ID }} \
+              -e ALIYUN_ACCESS_KEY_SECRET=${{ secrets.ALIYUN_ACCESS_KEY_SECRET }} \
+              -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
               pim-server
