--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -85,7 +85,7 @@ jobs:
             docker rm pim-server-container || true
             
             # 运行新的容器实例，并传递环境变量
-            docker run -d --name pim-server-container \
+            docker run -d
               -p 8000:8000 \
               -e DATASOURCE_URL=${{ secrets.DATASOURCE_URL }} \
               -e DATASOURCE_USERNAME=${{ secrets.DATASOURCE_USERNAME }} \
@@ -106,4 +106,5 @@ jobs:
               -e ALIYUN_ACCESS_KEY_ID=${{ secrets.ALIYUN_ACCESS_KEY_ID }} \
               -e ALIYUN_ACCESS_KEY_SECRET=${{ secrets.ALIYUN_ACCESS_KEY_SECRET }} \
               -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
+              --name pim-server-container \
               pim-server
