--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -21,8 +21,8 @@ jobs:
       KAFKA_SASL_JAAS_CONFIG: ${{ secrets.KAFKA_SASL_JAAS_CONFIG }}
       GITEE_CLIENT_ID: ${{ secrets.GITEE_CLIENT_ID }}
       GITEE_CLIENT_SECRET: ${{ secrets.GITEE_CLIENT_SECRET }}
-      GITHUB_CLIENT_ID: ${{ secrets.GITHUB_CLIENT_ID }}
-      GITHUB_CLIENT_SECRET: ${{ secrets.GITHUB_CLIENT_SECRET }}
+      GITHUB_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+      GITHUB_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
       WEICHAT_OPEN_CLIENT_ID: ${{ secrets.WEICHAT_OPEN_CLIENT_ID }}
       WEICHAT_OPEN_CLIENT_SECRET: ${{ secrets.WEICHAT_OPEN_CLIENT_SECRET }}
       ALIYUN_ACCESS_KEY_ID: ${{ secrets.ALIYUN_ACCESS_KEY_ID }}
@@ -99,8 +99,8 @@ jobs:
               -e KAFKA_SASL_JAAS_CONFIG='${{ secrets.KAFKA_SASL_JAAS_CONFIG }}' \
               -e GITEE_CLIENT_ID=${{ secrets.GITEE_CLIENT_ID }} \
               -e GITEE_CLIENT_SECRET=${{ secrets.GITEE_CLIENT_SECRET }} \
-              -e GITHUB_CLIENT_ID=${{ secrets.GITHUB_CLIENT_ID }} \
-              -e GITHUB_CLIENT_SECRET=${{ secrets.GITHUB_CLIENT_SECRET }} \
+              -e GITHUB_CLIENT_ID=${{ secrets.CLIENT_ID }} \
+              -e GITHUB_CLIENT_SECRET=${{ secrets.CLIENT_SECRET }} \
               -e WEICHAT_OPEN_CLIENT_ID=${{ secrets.WEICHAT_OPEN_CLIENT_ID }} \
               -e WEICHAT_OPEN_CLIENT_SECRET=${{ secrets.WEICHAT_OPEN_CLIENT_SECRET }} \
               -e ALIYUN_ACCESS_KEY_ID=${{ secrets.ALIYUN_ACCESS_KEY_ID }} \
