--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -75,7 +75,7 @@ spring:
       properties:
         sasl.mechanism: PLAIN
         security.protocol: SASL_PLAINTEXT
-        sasl.jaas.config: ${KAFKA_SASL_JAAS_CONFIG}
+        sasl.jaas.config: org.apache.kafka.common.security.plain.PlainLoginModule required username="${USERNAME}" password="${PASSWORD}";
       max-poll-records: 500 # 每次拉取的最大数量
       auto-commit-interval: 1000
     # 生产者配置
