--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -18,7 +18,8 @@ jobs:
       INFLUXDB_URL: ${{ secrets.INFLUXDB_URL }}
       INFLUXDB_TOKEN: ${{ secrets.INFLUXDB_TOKEN }}
       KAFKA_BOOTSTRAP_SERVERS: ${{ secrets.KAFKA_BOOTSTRAP_SERVERS }}
-      KAFKA_SASL_JAAS_CONFIG: ${{ secrets.KAFKA_SASL_JAAS_CONFIG }}
+      USERNAME: ${{USERNAME}}
+      PASSWORD: ${{PASSWORD}}
       GITEE_CLIENT_ID: ${{ secrets.GITEE_CLIENT_ID }}
       GITEE_CLIENT_SECRET: ${{ secrets.GITEE_CLIENT_SECRET }}
       GITHUB_CLIENT_ID: ${{ secrets.CLIENT_ID }}
@@ -96,7 +97,8 @@ jobs:
               -e INFLUXDB_URL=${{ secrets.INFLUXDB_URL }} \
               -e INFLUXDB_TOKEN=${{ secrets.INFLUXDB_TOKEN }} \
               -e KAFKA_BOOTSTRAP_SERVERS=${{ secrets.KAFKA_BOOTSTRAP_SERVERS }} \
-              -e KAFKA_SASL_JAAS_CONFIG='${{ secrets.KAFKA_SASL_JAAS_CONFIG }}' \
+              -e USERNAME=${{ USERNAME }}
+              -e PASSWORD=${{ PASSWORD }}
               -e GITEE_CLIENT_ID=${{ secrets.GITEE_CLIENT_ID }} \
               -e GITEE_CLIENT_SECRET=${{ secrets.GITEE_CLIENT_SECRET }} \
               -e GITHUB_CLIENT_ID=${{ secrets.CLIENT_ID }} \
