--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -75,7 +75,7 @@ spring:
       properties:
         sasl.mechanism: PLAIN
         security.protocol: SASL_PLAINTEXT
-        sasl.jaas.config: org.apache.kafka.common.security.plain.PlainLoginModule required username="${USERNAME}" password="${PASSWORD}";
+        sasl.jaas.config: org.apache.kafka.common.security.plain.PlainLoginModule required username="${SAAL_USERNAME}" password="${SAAL_PASSWORD}";
       max-poll-records: 500 # 每次拉取的最大数量
       auto-commit-interval: 1000
     # 生产者配置
@@ -85,7 +85,7 @@ spring:
       properties:
         sasl.mechanism: PLAIN
         security.protocol: SASL_PLAINTEXT
-        sasl.jaas.config: ${KAFKA_SASL_JAAS_CONFIG}
+        sasl.jaas.config: org.apache.kafka.common.security.plain.PlainLoginModule required username="${SAAL_USERNAME}" password="${SAAL_PASSWORD}";
       retries: 3 # 重试次数
       batch-size: 1000 # 批量发送数据的大小
       buffer-memory: 33554432 # 32M
@@ -154,7 +154,7 @@ aliyun:
 
 jwt:
   tokenHeader: Authorization # JWT 存储的请求头
-  secret: "koicmetkij%^238^983$^*$jdn489ciwue^%3847JI&#HJ(*FD^AH#(ASY&H#E)A&#HA(#HJAL)*@#789q3U(*E(3990" # JWT 加解密使用的密钥
+  secret: ${JWT_SECRET} # JWT 加解密使用的密钥
   expire: 604800 # JWT 的过期时间，单位秒，604800 = 7天
   tokenHead: ''  # JWT 的开头
 
