--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -18,8 +18,8 @@ jobs:
       INFLUXDB_URL: ${{ secrets.INFLUXDB_URL }}
       INFLUXDB_TOKEN: ${{ secrets.INFLUXDB_TOKEN }}
       KAFKA_BOOTSTRAP_SERVERS: ${{ secrets.KAFKA_BOOTSTRAP_SERVERS }}
-      SAAL_USERNAME: ${{ secrets.USERNAME }}
-      SAAL_PASSWORD: ${{ secrets.PASSWORD }}
+      SAAL_USERNAME: ${{ secrets.SAAL_USERNAME }}
+      SAAL_PASSWORD: ${{ secrets.SAAL_PASSWORD }}
       GITEE_CLIENT_ID: ${{ secrets.GITEE_CLIENT_ID }}
       GITEE_CLIENT_SECRET: ${{ secrets.GITEE_CLIENT_SECRET }}
       GITHUB_CLIENT_ID: ${{ secrets.CLIENT_ID }}
@@ -97,8 +97,8 @@ jobs:
               -e INFLUXDB_URL=${{ secrets.INFLUXDB_URL }} \
               -e INFLUXDB_TOKEN=${{ secrets.INFLUXDB_TOKEN }} \
               -e KAFKA_BOOTSTRAP_SERVERS=${{ secrets.KAFKA_BOOTSTRAP_SERVERS }} \
-              -e SAAL_USERNAME=${{ secrets.USERNAME }} \
-              -e SAAL_PASSWORD=${{ secrets.PASSWORD }} \
+              -e SAAL_USERNAME=${{ secrets.SAAL_USERNAME }} \
+              -e SAAL_PASSWORD=${{ secrets.SAAL_PASSWORD }} \
               -e GITEE_CLIENT_ID=${{ secrets.GITEE_CLIENT_ID }} \
               -e GITEE_CLIENT_SECRET=${{ secrets.GITEE_CLIENT_SECRET }} \
               -e GITHUB_CLIENT_ID=${{ secrets.CLIENT_ID }} \
